# lumina_prompt_engine

./: .gitignore  CODE_PLAN_AGENTS_AND_TOOLS.md  README.md  SETUP.md  mkdocs.yml  pyproject.toml  setup.ps1  setup.sh
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: docs.yml
backend/: .env.example  __init__.py  main.py  requirements.txt
backend/app/: __init__.py  models.py  pipeline.py  title_suggestion.py
backend/app/config/: engines.xml
backend/app/engines/: __init__.py  base.py  loader.py  providers.py  router.py
backend/app/evaluator/: __init__.py  judge.py
backend/tests/: test_main.py
crewai/: README.md  pyproject.toml
crewai/src/lumina_crew/: __init__.py  crew.py  main.py
crewai/src/lumina_crew/config/: agents.yaml  tasks.yaml
crewai/src/lumina_crew/tools/: __init__.py  lumina_tool.py
docs/: api.md  architecture.md  concepts.md  contributing.md  crewai.md  deployment.md  engines.md  evaluation.md  frontend.md  index.md  quickstart.md
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: empty-state.tsx  engine-card.tsx  evaluation-matrix.tsx  metric-badge.tsx  persona-form.tsx  persona-studio.tsx  result-summary.tsx  score-details.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  textarea.tsx
frontend/lib/: api-client.ts  crewai-client.ts  pdf-generator.ts
lumina_prompt_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: crew.py
