[project]
name = "lumina-crew"
version = "0.1.0"
description = "Lumina Prompt Engine - CrewAI crew and tools"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.14.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "instructor[litellm]>=1.0.0",
    "litellm>=1.50.0",
    "deepeval>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = []
